Cultibox (2.0.37) precise; urgency=low
    + Ajout de la configuration de la résolution de la webcam
    + Correction de l'affichage de synoptique et de l'import de configuration
    + Utilisation du format zip pour l'export/import de configuration Cultipi
    + Configuration de la date en mode adHoc

-- Yann Genevois <yann.genevois@cultibox.fr> Sat Feb 14 11:35:12 CEST 2015


Cultibox (2.0.36) precise; urgency=low
    + Correction du focus pour la console
    + Ajout des clefs hexadécimal pour WEP
    + Ajout des clefs 64bits WEP
    + Correction du fichier de configuration WEP
    + Ajout de la gestion de brightness et contrast

-- Yann Genevois <yann.genevois@cultibox.fr> Tue Feb 12 10:15:28 CEST 2015


Cultibox (2.0.35) precise; urgency=low
    + Correction du décallage de l'heure de prise de l'image webcam
    + Correction de la valeur de la seconde tolérance 
    + Masque par défaut à 255.255.255.0 si non définit
    + Correction de l'affichage de la partie wifi
    + Suppréssion des options inutiles pour le wifi
    + Suppréssion des scripts qui tournent en boucle avec le setTimeout ou setInterval
    + Ajout d'un bouton de RAZ de la configuraiton réseau
    + Ajout d'un bouton de téléchargement du service Bonjour

-- Yann Genevois <yann.genevois@cultibox.fr> Thu Feb 10 16:16:35 CEST 2015


Cultibox (2.0.34) precise; urgency=low
    + Corrections création image webcam
    + Correction bouton enregistrer la configuration
    + Correction locales

-- Yann Genevois <yann.genevois@cultibox.fr> Thu Feb 05 11:42:46 CEST 2015


Cultibox (2.0.33) precise; urgency=low
    + Corrections import/export pour Windows

-- Yann Genevois <yann.genevois@cultibox.fr> Wed Feb 04 11:46:28 CEST 2015


Cultibox (2.0.32) precise; urgency=low
    + Import/export d'une configuration

-- Yann Genevois <yann.genevois@cultibox.fr> Tue Feb 03 15:43:12 CEST 2015


Cultibox (2.0.31) precise; urgency=low
    + Fenêtre d'attente de chargement des pages
