@@ -3,6 +3,7 @@ Cultibox (2.0.37) precise; urgency=low
     + Correction de l'affichage de synoptique et de l'import de configuration
     + Utilisation du format zip pour l'export/import de configuration Cultipi
     + Configuration de la date en mode adHoc
+    + Navigation possible en adHoc
 
 -- Yann Genevois <yann.genevois@cultibox.fr> Sat Feb 14 11:35:12 CEST 2015
 
